tests/baselines/reference/jsEnumFunctionLocalNoCrash(strict=true).errors.txt
index.js(1,39): error TS7006: Parameter 'apiPrivate' implicitly has an 'any' type.


==== index.js (1 errors) ====
    function defineCommonExtensionSymbols(apiPrivate) {
                                          ~~~~~~~~~~
!!! error TS7006: Parameter 'apiPrivate' implicitly has an 'any' type.
        /** @enum {string} */
        apiPrivate.Events = {
          ButtonClicked: 'button-clicked-',
          PanelObjectSelected: 'panel-objectSelected-',
          NetworkRequestFinished: 'network-request-finished',
          OpenResource: 'open-resource',
          PanelSearch: 'panel-search-',
          RecordingStarted: 'trace-recording-started-',
          RecordingStopped: 'trace-recording-stopped-',
          ResourceAdded: 'resource-added',
          ResourceContentCommitted: 'resource-content-committed',
          ViewShown: 'view-shown-',
          ViewHidden: 'view-hidden-'
        };
    }
    